--- a/notebooks/labs/06-protein_dynamics-results.ipynb
+++ b/notebooks/labs/06-protein_dynamics-results.ipynb
@@ -1371,7 +1371,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
