--- a/notebooks/labs/09-genomics.ipynb
+++ b/notebooks/labs/09-genomics.ipynb
@@ -59,9 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Libraries imported successfully\n"
+     ]
+    }
+   ],
    "source": [
     "# Import required libraries\n",
     "%matplotlib inline\n",
