Fix in results notebook

--- a/notebooks/labs/11-transcriptomics-results.ipynb
+++ b/notebooks/labs/11-transcriptomics-results.ipynb
@@ -157,16 +157,36 @@
     "    data = response.json()[\"_embedded\"][\"associations\"]\n",
     "    \n",
     "    for assoc in data:\n",
-    "        pval = float(assoc.get(\"pvalue\", 1.0))\n",
-    "        if pval <= pval_threshold:\n",
-    "            records.append({\n",
-    "                \"rsid\": assoc.get(\"variantId\"),\n",
-    "                \"pvalue\": pval,\n",
-    "                \"mapped_genes\": assoc.get(\"mappedGenes\", \"\")\n",
-    "            })\n",
-    "    \n",
-    "    print(f\"✓ Found {len(records)} significant associations (p < {pval_threshold})\")\n",
-    "    return pd.DataFrame(records)"
+    "        pval = assoc.get(\"pvalue\", 1.0)\n",
+    "        if pval > pval_threshold:\n",
+    "            continue\n",
+    "\n",
+    "        # Extract SNP id\n",
+    "        rsid = None\n",
+    "        try:\n",
+    "            allele_name = assoc['loci'][0]['strongestRiskAlleles'][0]['riskAlleleName']\n",
+    "            rsid = allele_name.split(\"-\")[0]  # remove risk allele suffix\n",
+    "        except (IndexError, KeyError):\n",
+    "            rsid = None\n",
+    "\n",
+    "        # Extract genes\n",
+    "        genes = []\n",
+    "        try:\n",
+    "            for g in assoc['loci'][0].get('authorReportedGenes', []):\n",
+    "                if 'geneName' in g and g['geneName']:\n",
+    "                    genes.append(g['geneName'])\n",
+    "        except (IndexError, KeyError):\n",
+    "            pass\n",
+    "\n",
+    "        records.append({\n",
+    "            \"rsid\": rsid,\n",
+    "            \"pvalue\": pval,\n",
+    "            \"mapped_genes\": \",\".join(genes)\n",
+    "        })\n",
+    "\n",
+    "    df = pd.DataFrame(records)\n",
+    "    df = df.dropna(subset=['rsid'])\n",
+    "    return df"
    ]
   },
   {
